fix css and spacing

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -8,8 +8,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bn-onboard-custom.bn-onboard-modal-content {
-  background-color: #424242;
+  background: #424242;
 }
+/* 
+.bn-onboard-custom.bn-onboard-modal-content button {
+  border-color: #FFE500;
+} */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
